<resources>
    <string name="app_name">Hospital</string>
    <string name="txt_filter">FILTER</string>
    <string name="name_txt">Name</string>
    <string name="city_txt">City</string>
    <string name="website_txt">Website</string>
    <string name="txt_phone">Phone</string>
    <string name="txt_adapter_name">Name</string>
    <string name="status_txt">Status</string>
    <string name="download_txt">DOWNLOAD</string>
    <string name="url_txt">URL</string>
    <string name="txt_proceed">PROCEED</string>
    <string name="txt_details_name">Name</string>
    <string name="txt_details_address">Address</string>
    <string name="txt_details_status">Status</string>
    <string name="contact_details_txt">Contact details</string>
    <string name="txt_error_unknown">Unknown error</string>
    <string name="txt_success_caching">Successfully cached to Database</string>
    <string name="txt_error_caching">\"Error occurred while caching to Database. \"</string>
    <string name="txt_fetching">Fetching hospital list</string>
    <string name="txt_nothing_found">No hospital found matching %1$s. Try changing the search query</string>
</resources>
