<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:cardCornerRadius="@dimen/dm_default_margin"
    android:layout_marginTop="@dimen/dm_default_margin"
    android:layout_marginBottom="@dimen/dm_default_margin"
    android:elevation="@dimen/dm_default_margin"
    android:padding="@dimen/dm_default_margin"
    tools:targetApi="lollipop">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_name_actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_txt" />
        <TextView
            android:id="@+id/tv_city_actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_txt" />
        <TextView
            android:id="@+id/tv_phone_actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_phone" />
        <TextView
            android:id="@+id/tv_website_actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website_txt" />
    </LinearLayout>
</androidx.cardview.widget.CardView>